# PromptMatch

./: README.md
model-match/: .gitignore  README.md  config.yaml  main.py  pyproject.toml  setting.py
model-match/api/v1/: application_api.py  application_chat_api.py  chat_api.py  file_api.py  knowledge_api.py  knowledge_file_api.py  large_model_api.py  login_api.py  prompt_chat_api.py
model-match/constants/: constants.py  large_model_enum.py
model-match/exception/: api_exception.py
model-match/middlewares/: log_requests.py
model-match/model/: response_model.py
model-match/model/entity/: application.py  application_knowledge_relation.py  file.py  knowledge.py  knowledge_file_relation.py  large_model.py  model_log.py  user.py
model-match/model/request/: application_request.py  file_request.py  knowledge_file_request.py  knowledge_request.py  user_request.py
model-match/model/vo/: application_vo.py  file_vo.py  knowledge_vo.py  large_model_vo.py  user_vo.py
model-match/repository/: application_knowledge_relation_repository.py  application_repository.py  file_repository.py  knowledge_file_relation_repository.py  knowledge_repository.py  model_log_repository.py  user_repository.py
model-match/services/application/: application_chat.py  application_service.py  large_model_service.py
model-match/services/database/: base.py
model-match/services/file/: file_service.py
model-match/services/knowledge/: knowledge_file_service.py  (+1 more)
model-match/utils/: aliyun_oss.py  download_file.py  generate_token.py  json_converter.py  logger.py  nacos_client.py
(+57 files in other folders)
